--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="card">
                     <div class="box">
 
-                        <div class="text">New Test</div>
+                        <div class="text">New Taste</div>
                         <p>
                             <a href="https://nahid-jahani.github.io/Nahid-jahani-2021/" class="border">
                                 <img src="images/NewTast.png" class="works-img" Alt="NewTast" height="150" width="220">
