--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                         <div class="text">New Taste</div>
                         <p>
-                            <a href="https://nahid-jahani.github.io/Nahid-jahani-2021/" class="border">
+                            <a href="https://nahid-jahani.github.io/NewTest/" class="border">
                                 <img src="images/NewTast.png" class="works-img" Alt="NewTast" height="150" width="220">
                             </a>
                         </p>
