--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
     <div class="scroll-up-btn">
+
         <i class="fas fa-angle-up"></i>
     </div>
     <nav class="navbar">
@@ -226,8 +227,9 @@
                 <a href="mailto:jahaninahide@mail.com"><i class="fas fa-envelope"></i></a>
                 <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/"><i class="fab fa-github"></i></a>
+
                 <a href="images/resume.web.pdf" target="-blank" rel="noopener noreferrer"> <i
-                        class="far fa-file-pdf"></i></a>
+                        class="far fa-times-circle-o"></i></a>
             </span>
 
 
