--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </div>
 
 
-                    <a href="images/resume.web.pdf" target="-blank" rel="noopener noreferrer">Download CV</a>
+                    <a href="images/resume.web.pdf" target="-blank" rel="noopener noreferrer">Download CV.</a>
                 </div>
             </div>
         </div>
