--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
                         <div class="text">New Taste</div>
                         <p>
-                            <a href="https://nahid-jahani.github.io/NewTest/" class="border">
+                            <a href="https://nahid-jahani.github.io/Taste-Good/" class="border">
                                 <img src="images/NewTast.png" class="works-img" Alt="NewTast"  width="100%">
                             </a>
                         </p>
