change home page image

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <div class="text">New Taste</div>
                         <p>
                             <a href="https://nahid-jahani.github.io/Taste-Good/" class="border">
-                                <img src="images/NewTast.png" class="works-img" Alt="NewTast"  width="100%">
+                                <img src="images/New-taste.png" class="works-img" Alt="NewTast"  width="100%">
                             </a>
                         </p>
                     </div>
