--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 
             <span class="social-menu">
-                <a href="https://www.facebook.com" style="padding-left: 0px;"> <i
+                <a href="https://www.facebook.com/nahid.jahani" style="padding-left: 0px;"> <i
                         class="fab fa-facebook-square"></i></i></a>
                 <a href="mailto:jahaninahide@mail.com"><i class="fas fa-envelope"></i></a>
                 <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin"></i></a>
