--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="home-content">
                     <div class="text-1">Hello, my name is</div>
                     <div class="text-2">Nahid Jahani</div>
-                    <div class="text-3">And I'm a <span>Junior web developr</span></div>
+                    <div class="text-3">And I'm a <span> web developr</span></div>
                     <a href="mailto:jahaninahide@mail.com">Hire me</a>
                 </div>
             </div>
