--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>I'm a joiner web developer .I have over 3 years experience
+                    <p>I'm a web developer .I have over 3 years experience
                         in desginer in Iran.I recantlly upgreat my siklls in BCIT.
                         I am passionate
                         about finding solutions and improvements for my clients.</p>
