--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
                         <div class="text">Food Order</div>
                         <p> <a href="https://nahid-jahani.github.io/new-Order/" class="border">
-                                <img src="images/foodOrder.png" class="works-img" Alt="Food-order"  width="100%">
+                                <img src="images/FoodOrder.png" class="works-img" Alt="Food-order"  width="100%">
                             </a>
                         </p>
                        
